--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 h1 {
-	font-size : 3.0rem;
+	font-size : 5vh;
 	background : lightgreen;
 }
 
 h2 {
-	font-size : 2.0rem;
+	font-size : 4vh;
 }
 
 a:link, a:visited, a:hover, a:active {
@@ -23,25 +23,24 @@ html {
 	text-align : center;
 }
 
-p {
-	font-size : 3.0rem;
-}
-
-p.small {
-	font-size : 1.0rem;
+p, div.small {
+	font-size : 1.5vh;
 }
 
 table {
 	margin-left : auto;
 	margin-right : auto;
-	border : black solid 1px;
+	border : black solid 2px;
 	border-collapse : collapse;
+	width:80%;
+	table-layout: fixed;
+	overflow-wrap: break-word;
 }
 
 td, th, tr {
-	border : black solid 1px;
+	border : black solid 2px;
 	border-collapse : collapse;
-	font-size : 0.8rem;
+	font-size : 3vh;
 }
 
 td.colsensor {
